--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -21,7 +21,7 @@
 background = #222
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
+foreground = #ffffff
 foreground-alt = #555
 primary = #0a6cf5
 secondary = #e60053
