--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -20,9 +20,9 @@
 ;background = ${xrdb:color0:#222}
 background = #222
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
+foreground-alt2 = 555
 foreground = #ffffff
-foreground-alt = #555
+foreground-alt = #ffffff
 primary = #0a6cf5
 secondary = #e60053
 alert = #bd2c40
@@ -114,7 +114,7 @@ type = internal/bspwm
 pin-workspaces = true
 
 label-focused = %index%
-label-focused-background = ${colors.background-alt}
+label-focused-background = ${colors.background-alt2}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
