--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -38,7 +38,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+;font-0 = fixed:pixelsize=10;1
+font-0 = JetBrainMono:pixelsize=10;
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome5Free:pixelsize=10:antialias=false;3
